# roles-zome

./: 404.html  Cargo.toml  README.md  eslint.config.js  flake.nix  hashmap.json  hc_progenitor.html  index.html  network.sh  overview.html  package.json  pnpm-lock.yaml  roles-store.html  setup.html  tsconfig.json
.github/workflows/: build-and-cache.yaml  cache-hc-progenitor.yaml  publish-docs.yml  publish-npm.yml  test.yaml  update-flake-inputs.yaml
assets/: app.BQnHxEjr.js  app.CD4oreQ7.js  app.CM4_LMzf.js  app.CzuVqMYb.js  app.DIEXnuv-.js  app.DTz0yk7C.js  app.DVdb9u05.js  app.DjKN-sF2.js  app.DoZ6_NsA.js  app.DwI2oDOi.js  app.Xvf69t4H.js  elements_manage-all-roles.md.B0oFIYgC.js  elements_manage-all-roles.md.B4t8SeHE.lean.js  elements_manage-all-roles.md.CCIEWXBY.js  elements_manage-all-roles.md.CPUVVjg4.lean.js  elements_manage-all-roles.md.CkLNJyC6.js  elements_manage-all-roles.md.Du9SAg90.js  elements_manage-role-assignees.md.BidKr07v.js  elements_manage-role-assignees.md.CpBPysSv.js  elements_manage-role-assignees.md.DGXqpcVY.js  elements_manage-role-assignees.md.DMUjMK01.js  elements_manage-role-assignees.md.YOZK2JRH.lean.js  elements_roles-for-agent.md.6xzvsWDZ.js  elements_roles-for-agent.md.BFFcXqGF.js  elements_roles-for-agent.md.BJD8RW8b.lean.js  elements_roles-for-agent.md.JfnkeBH9.lean.js  elements_roles-for-agent.md._PbyiwST.lean.js  hc_progenitor.md.BSPb7RfU.js  hc_progenitor.md.D-G8bC01.lean.js  index.md.AYKL6Wue.lean.js  index.md.B1JsFjXC.js  index.md.BuFP7eUv.lean.js  overview.md.CZR0fWH6.lean.js  overview.md.CjT1dzGv.lean.js  overview.md.D-NifNbW.lean.js  overview.md.DLN8erhn.js  roles-store.md.B5rdurxf.js  roles-store.md.BL5DVXcH.lean.js  roles-store.md.ip0XSqLm.js  roles-store.md.l_8Aktts.lean.js  (+11 more)
assets/chunks/: @localSearchIndexroot.B6jQ686M.js  @localSearchIndexroot.B7iHgLz4.js  @localSearchIndexroot.BYP5T_Yl.js  @localSearchIndexroot.CaakINY7.js  @localSearchIndexroot.CrorZKqv.js  @localSearchIndexroot.DuvwVjqh.js  @localSearchIndexroot.SUYIG56L.js  @localSearchIndexroot.YvrMrfs9.js  VPLocalSearchBox.BNXtPjnu.js  VPLocalSearchBox.CF1SdTM5.js  VPLocalSearchBox.COiw8kZV.js  (+501 more)
backend/: .future-incompat-report.json  .rustc_info.json
crates/hc-progenitor/: .gitignore  Cargo.toml  default.nix  tauri.conf.json
crates/hc-progenitor/src/: config.rs  main.rs  run.rs
crates/roles_types/: Cargo.toml
crates/roles_types/src/: lib.rs
docs/: hc_progenitor.md  index.md  overview.md  package.json  roles-store.md  setup.md
elements/: custom-elements.json  manage-all-roles.html  manage-role-assignees.html  roles-for-agent.html
tests/: package.json  tsconfig.json  vitest.config.ts
ui/: custom-elements.json  package.json
workdir/: dna.nix  dna.yaml  happ.nix  happ.yaml
zomes/coordinator/example/: Cargo.toml
zomes/coordinator/example/src/: lib.rs
zomes/coordinator/roles/: Cargo.toml  zome.nix
zomes/coordinator/roles/src/: all_role_claims_deleted_proof.rs  assignees.rs  lib.rs  linked_devices.rs  notifications.rs  progenitors.rs  remote_signal.rs  role_claim.rs  unassignments.rs  utils.rs
zomes/integrity/example/: Cargo.toml
zomes/integrity/example/src/: lib.rs
zomes/integrity/roles/: Cargo.toml  zome.nix
zomes/integrity/roles/src/: admins.rs  all_role_claims_deleted_proof.rs  assignee_to_role.rs  lib.rs  linked_devices.rs  pending_unassignments.rs  progenitors.rs  role_claim.rs  role_to_assignee.rs  roles.rs  utils.rs
(+3850 files in other folders)
