[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["zomes/coordinator/*", "zomes/integrity/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.6"
hdk = { version = "0.5", features = [ "unstable-functions" ] }
holochain_serialized_bytes = "*"
serde = "1"

