[package]
name = "hc-progenitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = "2.0.0"
tauri-plugin-log = "2.0.0"

tauri-plugin-holochain = { git = "https://github.com/darksoil-studio/p2p-shipyard", branch = "main-0.4" }
holochain_types = "0.4.0-rc.2"
holochain_client = "0.6.0-rc"

roles_types = { path = "../roles_types" }

serde = "1"
serde_yaml = "0.9"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
url2 = "0.0.6"
anyhow = "1"
tempdir = "0.3.7"
lair_keystore = { version = "0.5" }

[build-dependencies]
tauri-build = { version = "2.0.0", default-features = false, features = [
] }
