[package]
name = "roles_types"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "roles_types"

[dependencies]
hdi = { workspace = true }
holo_hash = { version = "0.5", features = ["encoding"] }

holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
