[package]
name = "example_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "example_integrity"

[dependencies]
hdi = { workspace = true }

holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
roles_types = {path ="../../../crates/roles_types"}
